@@ -264,7 +264,13 @@ class ConfigCommands:
         """
         parsed_pattern = self._parse_pattern(pattern)
         with self._handle_config_error():
-            self._config.unset(option, save_yaml=not temp, pattern=parsed_pattern)
+            changed = self._config.unset(option, save_yaml=not temp, pattern=parsed_pattern)
+
+        if not changed:
+            text = f'{option} is not customized'
+            if pattern is not None:
+                text += f' for {pattern}'
+            raise cmdutils.CommandError(text)
 
     @cmdutils.register(instance='config-commands')
     @cmdutils.argument('win_id', value=cmdutils.Value.win_id)
